# tds-p-1

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
src/: __init__.py  config.py  evaluator.py  github.py  llm.py  logger.py  main.py  validator.py
